--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <section class="grid-con">
         <h2 class="hidden">Offer Section</h2>
         <div class="col-span-4  m-col-span-6 l-col-span-6 offerbox">
-          <p>Offer 1</p>
+          <p>promotion</p>
         </div>
         <div class="col-span-4  m-col-span-6 l-col-span-6 offerbox">
-          <p>Offer 2</p>
+          <p>promotion</p>
         </div>
       </section>
       <section class="grid-con">
